Update FilmController.java